@@ -1,6 +1,6 @@
 class Solution {
     public int magicalString(int n) {
-        List<Integer> s = new ArrayList<>(Arrays.asList(1, 2, 2));
+        List<Integer> s = new ArrayList<>(List.of(1, 2, 2));
         for (int i = 2; s.size() < n; ++i) {
             int pre = s.get(s.size() - 1);
             int cur = 3 - pre;
